# controllers/createCert.js
@@ -2,42 +2,42 @@ const User = require("../models/users");
 var uniqid = require('uniqid');
 const Link = require("../models/links");
 
-let certificate=(req,res)=>{
-    if(!req.session.email){
-        res.status(400)
-         res.json({
-            status:false,
-            message:"user not logged in"
+let certificate = (req, res) => {
+    if (!req.session.email) {
+        res.status(501)
+        res.json({
+            status: false,
+            message: "user not logged in"
         })
-    }else{
-        let link=uniqid()
-        req.session.link=link;
-        User.findOne({ email:req.session.email}, function (err, user) {
-            if(!user){
+    } else {
+        let link = uniqid()
+        req.session.link = link;
+        User.findOne({ email: req.session.email }, function (err, user) {
+            if (!user) {
+                res.status(501)
                 res.json({
-                    status:false,
-                    message:"Unregistered User"
+                    status: false,
+                    message: "Unregistered User"
                 })
-            }else{
+            } else {
                 user.certificateUrls.push(link);
-                user.save((err)=>{
+                user.save((err) => {
                     if (err) throw err
-                    else{
-                        let cert=new Link({
-                            issuer:req.session.email,
-                            name:req.body.name,
-                            link:link,
-                            boundary:req.body.boundary,
+                    else {
+                        let cert = new Link({
+                            issuer: req.session.email,
+                            name: req.body.name,
+                            link: link,
+                            boundary: req.body.boundary,
                         })
-                        cert.save(function(err, doc) {
+                        cert.save(function (err, doc) {
                             if (err) return console.error(err);
-                            res.status(200);
-                        res.json({
-                            status:true,
-                            message:"certificate created",
-                            link:req.hostname+"/certificate/"+link
-                        })
-                          });
+                            res.json({
+                                status: true,
+                                message: "certificate created",
+                                link: req.hostname + "/certificate/" + link
+                            })
+                        });
                     }
                 })
             }
@@ -45,4 +45,4 @@ let certificate=(req,res)=>{
     }
 }
 
-module.exports=certificate;
+module.exports = certificate;
