# routes/createCert.js
@@ -6,7 +6,7 @@ const router = express.Router();
 router.use(express.urlencoded({ extended: true }));
 router.use(express.json());
 
-router.get("/createcert",createCert);
+router.post("/createcert",createCert);
 
 module.exports=router;
 
