# routes/manage.js
@@ -8,6 +8,6 @@ router.use(express.json());
 
 router.get("/manage/:link/getcollectors",manage.getCollectors)
 router.get("/manage/:link/edit",manage.edit)
-router.post("/manage/:link/edit",manage.update)
+router.post("/manage/:link/update",manage.update)
 
 module.exports=router;
